<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ForgotPasswordFragment">

    <!-- TODO: Update blank fragment layout -->
  <TextView
    android:id="@+id/forgot_password_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot_password_title"
    android:textSize="28sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:fontFamily="@font/roboto_bold"
    android:layout_margin="20dp"/>

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/forgot_password_card"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/forgot_password_title"
      android:layout_marginHorizontal="@dimen/padding_fields"
      app:cardElevation="8dp"
      android:layout_marginVertical="40dp"
      android:background="@android:color/transparent"
      app:layout_constraintBottom_toTopOf="@+id/forgot_password_ok_button"
      app:layout_constraintVertical_chainStyle="spread_inside"
      >
        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/helper_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/helper_forgot_password_text"
          android:layout_gravity="center_horizontal"
          android:gravity="center"
          />
        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/forgot_password_email_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="20dp"
          android:layout_marginVertical="80dp"
          app:boxStrokeWidth="0dp"
          app:boxStrokeWidthFocused="0dp"
          >

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/write_email"
            />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
      android:id="@+id/forgot_password_ok_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/recovery_password_button"
      android:fontFamily="@font/roboto_bold"
      app:layout_constraintTop_toBottomOf="@+id/forgot_password_card"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/to_login_button"
      app:layout_constraintVertical_chainStyle="spread_inside"
    />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/to_login_button"
    app:icon="@drawable/login_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/comback_to_login_button"
    android:backgroundTint="@color/danger"
    android:fontFamily="@font/roboto_bold"
    app:layout_constraintTop_toBottomOf="@+id/forgot_password_ok_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
