<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SpecialistFragment">

    <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/specialist_fragment_banner"
      android:layout_width="0dp"
      android:layout_height="@dimen/banner"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:src="@drawable/team_of_doctors2"
      android:scaleType="fitXY"
      />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/specialist_fragment_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/specialist_fragment_banner"
      android:textColor="@color/primary"
      android:fontFamily="@font/roboto_bold"
      android:text="@string/specialist_title"
      android:layout_marginTop="@dimen/padding_fields"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
      />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/specialist_fragment_subtitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/specialist_fragment_title"
      android:text="@string/specialist_fragment_subtitle"
      android:layout_marginTop="@dimen/defaultMargin"
      android:layout_marginHorizontal="40dp"
      />
    <FrameLayout
      android:id="@+id/specialist_fragment_recycler_container"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginHorizontal="40dp"
      app:layout_constraintTop_toBottomOf="@id/specialist_fragment_subtitle"
      android:layout_marginTop="@dimen/padding_fields">

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/specialist_fragment_recycler_title"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialist_label"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/primary"
        />
      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/specialist_fragment_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        >
        <AutoCompleteTextView
          android:id="@+id/specialist_fragment_search"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="none"
          android:hint="@string/search" />
      </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>
    <com.facebook.shimmer.ShimmerFrameLayout
      android:id="@+id/shimmer_doctor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/specialist_fragment_recycler_container"
      app:layout_constraintBaseline_toBottomOf="parent"
      >
        <include layout="@layout/shimmer_item_doctor" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/specialist_fragment_recycler"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/specialist_fragment_recycler_container"
      app:layout_constraintBaseline_toBottomOf="parent"
      android:layout_marginTop="8dp"
      tools:listitem="@layout/item_doctor"
      tools:visibility="gone"
      tools:itemCount="3"/>


</androidx.constraintlayout.widget.ConstraintLayout>
