<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

  <com.google.android.material.imageview.ShapeableImageView
    android:id="@+id/home_fragment_banner"
    android:layout_width="0dp"
    android:layout_height="@dimen/banner"
    android:adjustViewBounds="false"
    android:cropToPadding="false"
    android:scaleType="fitXY"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/banner2" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/home_fragment_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/home_fragment_banner"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
    android:fontFamily="@font/roboto_bold"
    android:layout_marginHorizontal="@dimen/padding_fields"
    android:layout_marginTop="@dimen/padding_fields"
    android:textColor="@color/secundary"
    android:text="@string/home_fragment_title"/>

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/home_fragment_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/home_fragment_title"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
    android:layout_marginHorizontal="@dimen/padding_fields"
    android:text="@string/home_fragment_subtitle"/>

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/home_fragment_recycler_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/home_fragment_subtitle"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
    android:layout_marginHorizontal="@dimen/padding_fields"
    android:fontFamily="@font/roboto_bold"
    android:text="@string/nuestros_servicios"
    android:textColor="@color/secundary"/>
  <com.facebook.shimmer.ShimmerFrameLayout
    android:id="@+id/shimmerServices"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/home_fragment_recycler_title"
    >
      <include layout="@layout/shimmer_item_service"
        />
  </com.facebook.shimmer.ShimmerFrameLayout>
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/home_fragment_recycler"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="@dimen/defaultMargin"
    app:layout_constraintTop_toBottomOf="@id/home_fragment_recycler_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:listitem="@layout/item_service"
    tools:visibility="invisible"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
